# util-losos

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG.md  CLAUDE.md  Cargo.toml  Containerfile  Containerfile.isoman  Containerfile.kernel  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  build_distro.sh  cliff.toml  launch.sh
.cargo/: config.toml
.config/: nextest.toml
.github/workflows/: build.yml  mirror-redirect.yml
crates/actman/: Cargo.toml
crates/actman/src/: cmdline.rs  lib.rs  main.rs  persistence.rs  preboot.rs  reboot.rs
crates/bench/: Cargo.toml
crates/bench/benches/: actman.rs  cluman.rs  dhcman.rs  gpuman.rs  isoman.rs  pakman.rs  sshman.rs  updman.rs
crates/bootenv/: .gitignore  .rustfmt.toml  Cargo.toml  README.md
crates/bootenv/src/: cmdline.rs  luks.rs  main.rs  provider.rs
crates/cluman/: Cargo.toml
crates/cluman/src/: client.rs  controller.rs  lib.rs  main.rs  schemas.rs  server.rs
crates/cluman/tests/: client.rs  controller.rs  server.rs
crates/dhcman/: Cargo.toml
crates/dhcman/src/: dhcp.rs  lib.rs  main.rs  netconf.rs
crates/isoman/: Cargo.toml
crates/isoman/src/: build.rs  container.rs  gsi.rs  lib.rs  main.rs  schema.rs  toolchain.rs
crates/pakman/: Cargo.toml
crates/pakman/src/: install.rs  lib.rs  main.rs  run.rs
crates/pakman/tests/: run.rs
crates/sshman/: Cargo.toml
crates/sshman/src/: auth.rs  handler.rs  hostkey.rs  lib.rs  main.rs  mode.rs  server.rs  session.rs
crates/testman/: Cargo.toml
crates/testman/src/: harness.rs  lib.rs  main.rs  suite.rs
crates/updman/: Cargo.toml
crates/updman/src/: lib.rs  main.rs  schema.rs
crates/user/: CLAUDE.md  Cargo.toml
crates/user/crates/perman/: Cargo.toml
crates/user/crates/userman/: Cargo.toml
crates/user/crates/userman/src/: lib.rs  main.rs
crates/user/perman/: Cargo.toml
crates/user/perman/src/: lib.rs
crates/user/userman/: Cargo.toml
crates/user/userman/src/: cli.rs  crypto.rs  daemon.rs  lib.rs  login.rs  main.rs  mode.rs  twofa.rs
docs/: actman.md  pakman.md  testman.md  updman.md
scripts/: pre-commit
tests/: boot.rs  boots.rs  client.rs  controller.rs  install.rs  server.rs  vm_install.rs
