[workspace]
resolver = "3"
members = ["crates/bench", "crates/bootenv", "crates/isoman"

    ,"crates/actman",
    "crates/updman",
    "crates/cluman",
    "crates/dhcman",
    "crates/testman",
    "crates/user/crates/perman",
    "crates/user/crates/userman",
    "crates/gpuman",
    "crates/preflight",
]
exclude = [
]

[workspace.dependencies]
actman = { version = "0.1.0", path = "crates/actman" }
cluman = { version = "0.1.0", path = "crates/cluman" }
dhcman = { version = "0.1.0", path = "crates/dhcman" }
updman = { version = "0.1.0", path = "crates/updman" }
pm = { version = "1.0.1", path = "crates/pcm" }
isoman = { version = "0.1.0", path = "crates/isoman" }
gpuman = { version = "0.1.0", path = "crates/gpuman" }
iptman = { version = "0.1.0", git = "https://gitlab.com/losos-linux/iptman" }
mkbootimg = { git = "https://gitlab.com/losos-linux/mkbootimg" }
base64 = "0.22.1"
russh-keys = "0.49"
rustix = { version = "1.1.4", features = ["system", "mount", "process"] }
serde_json = "1.0.149"
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"] }
tempfile = "3"
totp-rs = { version = "5", features = ["otpauth"] }
ureq = { version = "3", features = ["json"] }
userman = { version = "0.1.0", git = "https://gitlab.com/losos-linux/userman" }
walkdir = "*"


[profile.release]
lto = true
codegen-units = 1
strip = true

[profile.dev]
codegen-units = 16