[workspace]
resolver = "3"
members = ["crates/bench", "crates/bootenv", "crates/isoman"

    ,"crates/bootlib",
    "crates/actman",
    "crates/updman",
    "crates/cluman",
    "crates/dhcman",
    "crates/testman",
    "crates/user/crates/perman",
    "crates/user/crates/userman",
    "crates/gpuman",
    "crates/preflight",
]

[workspace.dependencies]
actman = { version = "0.1.0", path = "crates/actman" }
bootlib = { version = "0.1.0", path = "crates/bootlib" }
cluman = { version = "0.1.0", path = "crates/cluman" }
dhcman = { version = "0.1.0", path = "crates/dhcman" }
updman = { version = "0.1.0", path = "crates/updman" }
pm = { version = "1.0.1", path = "crates/pcm" }
isoman = { version = "0.1.0", path = "crates/isoman" }
gpuman = { version = "0.1.0", path = "crates/gpuman" }
perman = { version = "0.1.0", path = "crates/user/crates/perman" }
iptman = { version = "0.1.0", git = "https://gitlab.com/losos-linux/iptman" }
mkbootimg = { git = "https://gitlab.com/losos-linux/mkbootimg" }
base64 = "0.22.1"
clap = { version = "4.6.0", features = ["derive"] }
miette = { version = "7.6.0", features = ["fancy"] }
russh-keys = "0.49"
rustix = { version = "1.1.4", features = ["system", "mount", "process"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml = "0.9"
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"] }
strum = { version = "0.28.0", features = ["derive"] }
tempfile = "3"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread"] }
totp-rs = { version = "5", features = ["otpauth"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ureq = { version = "3", features = ["json"] }
userman = { version = "0.1.0", git = "https://gitlab.com/losos-linux/userman" }
walkdir = "*"

[profile.release]
opt-level = "z"
panic = "abort"
strip = "symbols"
lto = true
codegen-units = 1

[profile.dev]
codegen-units = 16