[package]
name = "actman"
version = "0.1.0"
edition = "2024"

[dependencies]
miette.workspace = true
rustix = { version = "1.1.4", features = ["system", "mount"] }
strum = { version = "0.28.0", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
