[package]
name = "bench"
version = "0.1.0"
edition = "2024"
publish = false
autobenches = false

[dev-dependencies]
actman = { workspace = true }
base64 = { workspace = true }
cluman = { workspace = true }
dhcman = { workspace = true }
gpuman = { workspace = true }
isoman = { workspace = true }
mkbootimg = { workspace = true }
pakman = { workspace = true }
russh-keys = { workspace = true }
rustix = { workspace = true }
serde_json = { workspace = true }
ssh-key = { workspace = true }
tempfile = { workspace = true }
totp-rs = { workspace = true }
updman = { workspace = true }
ureq = { workspace = true }
userman = { workspace = true }
walkdir = { workspace = true }

[[test]]
name = "actman"
path = "benches/actman.rs"

[[test]]
name = "cluman"
path = "benches/cluman.rs"

[[test]]
name = "dhcman"
path = "benches/dhcman.rs"

[[test]]
name = "updman"
path = "benches/updman.rs"

[[test]]
name = "pakman"
path = "benches/pakman.rs"

[[test]]
name = "isoman"
path = "benches/isoman.rs"

[[test]]
name = "gpuman"
path = "benches/gpuman.rs"

