[package]
name = "bootenv"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Minimal stage-1 initramfs boot environment with LUKS unlock support"
rust-version = "1.85"

[dependencies]
flate2 = "1.0"
miette = { version = "*", features = ["fancy"] }
rustix = { version = "1.1.4", features = ["mount", "termios", "process"] }
smol = "2.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# LUKS2 unlock — same crate used by actman
luks = { version = "*", optional = true }

[features]
default = ["luks"]
luks = ["dep:luks"]

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
