[package]
name = "bootenv"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Minimal stage-1 initramfs boot environment"
rust-version = "1.85"

[dependencies]
actman = { path = "../actman" }
miette = { version = "*", features = ["fancy"] }
rustix = { version = "1.1.4", features = ["mount", "termios", "process"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
