[package]
name = "cluman"
version = "0.1.0"
edition = "2024"

[dependencies]
actman = { version = "0.1.0", path = "../actman" }
clap.workspace = true
ipnet = { version = "2.12.0", features = ["serde"] }
either = { version = "1.15.0", features = ["serde"] }
miette.workspace = true
minreq = "2.14.1"
rustyx = "0.2.0"
serde.workspace = true
serde_json.workspace = true
strum.workspace = true
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread"] }
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
httpmock = "0.8.3"
mockall = "0.14.0"
tempfile.workspace = true
