[package]
name = "pakman"
version = "0.1.0"
edition = "2024"

[dependencies]
actman = { version = "0.1.0", path = "../actman" }
clap = { workspace = true, features = ["derive"] }
miette.workspace = true
rustix.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
walkdir.workspace = true
