[workspace]

[package]
name = "sshman"
version = "0.1.0"
edition = "2024"

[dependencies]
actman = { git = "https://gitlab.com/mtos-v2/actman", version = "0.1.0" }
userman = { version = "0.1.0", path = "../user/crates/userman" }
russh = "0.49"
russh-keys = "0.49"
base64 = "0.22.1"
landlock = "0.4"
miette = { version = "*", features = ["fancy"] }
tokio = { version = "*", features = ["rt-multi-thread", "process", "io-util", "signal", "sync", "macros"] }
totp-rs = { version = "5", features = ["otpauth"] }
tracing = "*"
tracing-subscriber = "*"
rustix = { version = "1.1.4", features = ["pty", "process", "termios", "stdio"] }
libc = "0.2"
ssh-key = { version = "0.6", features = ["ed25519", "rand_core"] }
async-trait = "0.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
