[workspace]
resolver = "3"
members = ["crates/perman","crates/userman"]

[workspace.dependencies]
clap = { version = "4.6.0", features = ["derive"] }
luks = "0.4.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "*"
miette = "7.6.0"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
rustyx = "*"
ureq = { version = "*" }
tokio = {version = "*", features = ["rt-multi-thread"]}

[profile.release]
opt-level = "s"
codegen-units = 1
lto = true
strip = true
panic = "abort"

[profile.dev]
opt-level = "z"
codegen-units = 16
