[package]
name = "userman"
version = "0.1.0"
edition = "2024"

[dependencies]
actman = { git = "https://gitlab.com/mtos-v2/util-mdl", version = "0.1.0" }
base64 = "0.22.1"
clap = { workspace = true, features = ["derive"] }
ctap-hid-fido2 = "3"
either = "1.15.0"
luks.workspace = true
miette = { workspace = true, features = ["fancy"] }
rand = "0.9"
expressjs.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio.workspace = true
totp-rs = { version = "5", features = ["otpauth"] }
tracing.workspace = true
tracing-subscriber.workspace = true
ureq = {workspace = true, features = ["json"]}
ratatui = "0.29"
crossterm = "0.28"
ctrlc = "3.5.2"
